--- a/kufar-analogue/kufar-analogue/ru.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/ru.lproj/Localizable.strings
@@ -1,6 +1,5 @@
 
-/*  */
 "tabBar.add" = "Создать";
-
-/*  */
 "tabBar.profile" = "Профиль";
+"navBar.setting" = "Настройки";
+"navBar.sign" = "Выjти";
