--- a/kufar-analogue/kufar-analogue/en.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/en.lproj/Localizable.strings
@@ -9,4 +9,37 @@
 "tabBar.profile" = "Profile";
 "tabBar.add" = "Add";
 "navBar.setting" = "Setting";
-"navBar.sign" = "Sign Out";
+"navBar.signOut" = "Sign Out";
+"label.userSetting" = "User Setting";
+"label.pleaseLogin" = "Please login🥹";
+"label.userSettingNameLabel" = "Name";
+"indicator.pleaseLogin" = "Please login🥹";
+"indicator.errorIndicator" = "Error";
+"indicator.successIndicator" = "Success";
+"indicator.successDeletePostIndicator" = "Success Delete Post";
+"indicator.emailIsEmptyIndicator" = "email Is Empty";
+"indicator.passwordResetEmailSentIndicator" = "password Reset Email Sent";
+"indicator.passwordIsEmptyIndicator" = "Password is Empty";
+"navBar.signIn" = "Sign In";
+"indicator.pleaseCheckYourEmailForConfirmNewEmailIndicator" = "Please check your email for confirm new email";
+"indicator.passwordHasLessIndicator" = "Password has less than 6 symbols";
+"indicator.LogInToChangeYourProfileIndicator" = "Log in to change your profile";
+"controller.saveChangesAllertControllerTitle" = "Save Changes?";
+"controller.areYouSureToMakeChangesAllertControllerMessage" = "Are you sure to make changes?";
+"action.yes" = "Yes";
+"action.no" = "No";
+"placeholder.textFieldTypeName" = "Enter name...";
+"placeholder.textFieldTypeEmail" = "Enter email...";
+"placeholder.textFieldTypePassword" = "Enter password...";
+"button.saveChangesButton" = "";
+"button.saveChangesButton" = "";
+"indicator.errorDeletePostIndicator" = "Error delete post";
+"action.delete" = "Delete post";
+"label.noPostLabel" = "No post`s";
+"label.emptyProfileLabel" = "Empty profile";
+"indicator.errorSigningInIndicator" = "Error Sign In";
+"indicator.verifyEmailIndicator" = "Verify Email";
+"indicator.errorCreatingUserIndicator" = "Error Creating User";
+"indicator.errorSendingVerificationEmailIndicator" = "Error sending verification email\"";
+"indicator.verificationEmailSentIndicator" = "Verification email sent";
+"indicator.pleaseCheckYourEmailForVerufyNewEmailIndicator" = "Check your email and verify account";
