--- a/kufar-analogue/kufar-analogue/ru.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/ru.lproj/Localizable.strings
@@ -2,4 +2,38 @@
 "tabBar.add" = "Создать";
 "tabBar.profile" = "Профиль";
 "navBar.setting" = "Настройки";
-"navBar.sign" = "Выjти";
+"navBar.signOut" = "Выjти";
+"label.userSetting" = "Настроjки ";
+"label.pleaseLogin" = "Пожалуйста, авторизуйтесь";
+"label.userSettingNameLabel" = "Имя";
+"indicator.pleaseLogin" = "Пожалуйста, авторизуйтесь";
+"indicator.errorIndicator" = "Ошибка";
+"indicator.successIndicator" = "Успех💅";
+"indicator.successDeletePostIndicator" = "Пост успешно удален";
+"indicator.emailIsEmptyIndicator" = "email пустой";
+"indicator.passwordResetEmailSentIndicator" = "Парол отправлен на email";
+"indicator.passwordIsEmptyIndicator" = "Поле пароля пустое";
+"navBar.signIn" = "Войти";
+"indicator.pleaseCheckYourEmailForConfirmNewEmailIndicator" = "Пожалуйста, проверьте свою почту для подтверждения нового email";
+"indicator.passwordHasLessIndicator" = "Пароль должен быть длинной от 6 символов";
+"indicator.pleaseCheckYourEmailIndicator" = "Пожалуйста, проверьте свой email для ";
+"indicator.LogInToChangeYourProfileIndicator" = "Войдите, чтобы изменить профиль";
+"controller.saveChangesAllertControllerTitle" = "Сохранить изменения?";
+"controller.areYouSureToMakeChangesAllertControllerMessage" = "Вы уверены, что хотите внести изменения?";
+"action.yes" = "Да";
+"action.no" = "Нет";
+"placeholder.textFieldTypeName" = "Введите имя...";
+"placeholder.textFieldTypeEmail" = "Введите email...";
+"placeholder.textFieldTypePassword" = "Введите пароль...";
+"button.saveChangesButton" = "";
+"button.saveChangesButton" = "";
+"indicator.errorDeletePostIndicator" = "Ошибка удаления поста";
+"action.delete" = "Удалить пост";
+"label.noPostLabel" = "Об`явлений нет";
+"label.emptyProfileLabel" = "Профиль пустой";
+"indicator.errorSigningInIndicator" = "Ошибка входа";
+"indicator.verifyEmailIndicator" = "Подтвердите email";
+"indicator.errorCreatingUserIndicator" = "Ошибка создания Пользователя";
+"indicator.errorSendingVerificationEmailIndicator" = "Ошибка отправки подтверждения на email";
+"indicator.verificationEmailSentIndicator" = "Подтверждение отправлено на email";
+"indicator.pleaseCheckYourEmailForVerufyNewEmailIndicator" = "Проверьте email и подтвердите аккаунт";
