--- a/kufar-analogue/kufar-analogue/ru.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/ru.lproj/Localizable.strings
@@ -37,3 +37,29 @@
 "indicator.errorSendingVerificationEmailIndicator" = "Ошибка отправки подтверждения на email";
 "indicator.verificationEmailSentIndicator" = "Подтверждение отправлено на email";
 "indicator.pleaseCheckYourEmailForVerufyNewEmailIndicator" = "Проверьте email и подтвердите аккаунт";
+"action.separateBathroom" = "Раздельный";
+"action.combinedBathroom" = "Совмещенный";
+"action.glazedBalcon" = "Застекленный";
+"action.nonGlazedBalcon" = "Не застекленный";
+"button.editPostButton" = "Изменить обьявление💅";
+"placeholder.textFieldTypeAddress" = "Введите адрес";
+"label.totalNumberOfRoomsLabel" = "Всего комнат";
+"action.takePhoto" = "Сделать фото";
+"action.openGalerry" = "Выбрать фото";
+"indicator.UserDoesntExist" = "Пользователь не существует";
+"indicator.UserDoesntHaveEmail" = "У пользователя нет email";
+"indicator.writeNamePost" = "Заполните адрес";
+"indicator.writePhoneNumber" = "Заполните номер телефона";
+"indicator.writeTotalNumberOfRooms" = "Введите количество комнат";
+"indicator.writeNumbersOfFloors" = "Напишите этаж (0-30)";
+"indicator.writeTotalArea" = "Введите общую площадь";
+"indicator.pleaseSelectBathroomType" = "Выберите тип санузла";
+"indicator.pleaseSelectBalconeType" = "Выберите тип балкона";
+"indicator.writePrice" = "Заполните цену";
+"controller.thereIsNotDescription" = "Не заполнено описание";
+"controller.doYouWantToCreatePostWithoutDescription" = "Выхотите создать объявление без описания";
+"controller.thereIsNoPhoto" = "Не выбрано фото";
+"controller.doYouWantToCreatePostWithoutPhoto" = "Создать объявление без фото?";
+"indicator.errorDuringPhotoProcessing" = "Ошибка пр обработке фото";
+"indicator.postSuccessfulyCreated" = "Обьявление создано";
+"indicator.postSuccessfulyEdited" = "Обьявление изменино";
