--- a/kufar-analogue/kufar-analogue/en.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/en.lproj/Localizable.strings
@@ -43,3 +43,29 @@
 "indicator.errorSendingVerificationEmailIndicator" = "Error sending verification email\"";
 "indicator.verificationEmailSentIndicator" = "Verification email sent";
 "indicator.pleaseCheckYourEmailForVerufyNewEmailIndicator" = "Check your email and verify account";
+"action.separateBathroom" = "Separate Bathroom";
+"action.combinedBathroom" = "Сombined Bathroom";
+"action.glazedBalcon" = "Glazed Balcon";
+"action.nonGlazedBalcon" = "Non-Glazed Balcon";
+"button.editPostButton" = "Edit Post🤌🏾";
+"placeholder.textFieldTypeAddress" = "Enter address";
+"label.totalNumberOfRoomsLabel" = "Total numer of Rooms";
+"action.takePhoto" = "Take photo";
+"action.openGalerry" = "Open Galerry";
+"indicator.UserDoesntExist" = "User don`t exist";
+"indicator.UserDoesntHaveEmail" = "User don`t have email";
+"indicator.writeNamePost" = "Write address";
+"indicator.writePhoneNumber" = "Write phone number";
+"indicator.writeTotalNumberOfRooms" = "Write total number of rooms";
+"indicator.writeNumbersOfFloors" = "Write number of floors (0-30)";
+"indicator.writeTotalArea" = "Write total area";
+"indicator.pleaseSelectBathroomType" = "Please, select Bathroom type";
+"indicator.pleaseSelectBalconeType" = "Please, select balcone type";
+"indicator.writePrice" = "Write price";
+"controller.thereIsNotDescription" = "There is no description";
+"controller.doYouWantToCreatePostWithoutDescription" = "Do you want to create post without description?";
+"controller.thereIsNoPhoto" = "There is no Photo";
+"controller.doYouWantToCreatePostWithoutPhoto" = "Do You want create without Photo?";
+"indicator.errorDuringPhotoProcessing" = "Error during Photo processing";
+"indicator.postSuccessfulyCreated" = "Post successfully created";
+"indicator.postSuccessfulyEdited" = "Post successfuly edited";
