--- a/kufar-analogue/kufar-analogue/en.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/en.lproj/Localizable.strings
@@ -7,65 +7,65 @@
 */
 
 "tabBar.profile" = "Profile";
-"tabBar.add" = "Add";
-"navBar.setting" = "Setting";
-"navBar.signOut" = "Sign Out";
-"label.userSetting" = "User Setting";
-"label.pleaseLogin" = "Please login🥹";
-"label.userSettingNameLabel" = "Name";
-"indicator.pleaseLogin" = "Please login🥹";
-"indicator.errorIndicator" = "Error";
-"indicator.successIndicator" = "Success";
-"indicator.successDeletePostIndicator" = "Success Delete Post";
-"indicator.emailIsEmptyIndicator" = "email Is Empty";
-"indicator.passwordResetEmailSentIndicator" = "password Reset Email Sent";
-"indicator.passwordIsEmptyIndicator" = "Password is Empty";
-"navBar.signIn" = "Sign In";
-"indicator.pleaseCheckYourEmailForConfirmNewEmailIndicator" = "Please check your email for confirm new email";
-"indicator.passwordHasLessIndicator" = "Password has less than 6 symbols";
-"indicator.LogInToChangeYourProfileIndicator" = "Log in to change your profile";
-"controller.saveChangesAllertControllerTitle" = "Save Changes?";
-"controller.areYouSureToMakeChangesAllertControllerMessage" = "Are you sure to make changes?";
-"action.yes" = "Yes";
-"action.no" = "No";
-"placeholder.textFieldTypeName" = "Enter name...";
-"placeholder.textFieldTypeEmail" = "Enter email...";
-"placeholder.textFieldTypePassword" = "Enter password...";
-"button.saveChangesButton" = "";
-"button.saveChangesButton" = "";
-"indicator.errorDeletePostIndicator" = "Error delete post";
-"action.delete" = "Delete post";
-"label.noPostLabel" = "No post`s";
-"label.emptyProfileLabel" = "Empty profile";
-"indicator.errorSigningInIndicator" = "Error Sign In";
-"indicator.verifyEmailIndicator" = "Verify Email";
-"indicator.errorCreatingUserIndicator" = "Error Creating User";
-"indicator.errorSendingVerificationEmailIndicator" = "Error sending verification email\"";
-"indicator.verificationEmailSentIndicator" = "Verification email sent";
-"indicator.pleaseCheckYourEmailForVerufyNewEmailIndicator" = "Check your email and verify account";
-"action.separateBathroom" = "Separate Bathroom";
 "action.combinedBathroom" = "Сombined Bathroom";
+"action.delete" = "Delete post";
 "action.glazedBalcon" = "Glazed Balcon";
+"action.no" = "No";
 "action.nonGlazedBalcon" = "Non-Glazed Balcon";
-"button.editPostButton" = "Edit Post🤌🏾";
-"placeholder.textFieldTypeAddress" = "Enter address";
-"label.totalNumberOfRoomsLabel" = "Total numer of Rooms";
-"action.takePhoto" = "Take photo";
 "action.openGalerry" = "Open Galerry";
+"action.separateBathroom" = "Separate Bathroom";
+"action.takePhoto" = "Take photo";
+"action.yes" = "Yes";
+"button.editPostButton" = "Edit Post🤌🏾";
+"button.saveChangesButton" = "";
+"button.saveChangesButton" = "";
+"controller.areYouSureToMakeChangesAllertControllerMessage" = "Are you sure to make changes?";
+"controller.doYouWantToCreatePostWithoutDescription" = "Do you want to create post without description?";
+"controller.doYouWantToCreatePostWithoutPhoto" = "Do You want create without Photo?";
+"controller.saveChangesAllertControllerTitle" = "Save Changes?";
+"controller.thereIsNoPhoto" = "There is no Photo";
+"controller.thereIsNotDescription" = "There is no description";
+"indicator.LogInToChangeYourProfileIndicator" = "Log in to change your profile";
 "indicator.UserDoesntExist" = "User don`t exist";
 "indicator.UserDoesntHaveEmail" = "User don`t have email";
-"indicator.writeNamePost" = "Write address";
-"indicator.writePhoneNumber" = "Write phone number";
-"indicator.writeTotalNumberOfRooms" = "Write total number of rooms";
-"indicator.writeNumbersOfFloors" = "Write number of floors (0-30)";
-"indicator.writeTotalArea" = "Write total area";
-"indicator.pleaseSelectBathroomType" = "Please, select Bathroom type";
-"indicator.pleaseSelectBalconeType" = "Please, select balcone type";
-"indicator.writePrice" = "Write price";
-"controller.thereIsNotDescription" = "There is no description";
-"controller.doYouWantToCreatePostWithoutDescription" = "Do you want to create post without description?";
-"controller.thereIsNoPhoto" = "There is no Photo";
-"controller.doYouWantToCreatePostWithoutPhoto" = "Do You want create without Photo?";
+"indicator.emailIsEmptyIndicator" = "email Is Empty";
+"indicator.errorCreatingUserIndicator" = "Error Creating User";
+"indicator.errorDeletePostIndicator" = "Error delete post";
 "indicator.errorDuringPhotoProcessing" = "Error during Photo processing";
+"indicator.errorIndicator" = "Error";
+"indicator.errorSendingVerificationEmailIndicator" = "Error sending verification email";
+"indicator.errorSigningInIndicator" = "Error Sign In";
+"indicator.passwordHasLessIndicator" = "Password has less than 6 symbols";
+"indicator.passwordIsEmptyIndicator" = "Password is Empty";
+"indicator.passwordResetEmailSentIndicator" = "password Reset Email Sent";
+"indicator.pleaseCheckYourEmailForConfirmNewEmailIndicator" = "Please check your email for confirm new email";
+"indicator.pleaseCheckYourEmailForVerufyNewEmailIndicator" = "Check your email and verify account";
+"indicator.pleaseLogin" = "Please login🥹";
+"indicator.pleaseSelectBalconeType" = "Please, select balcone type";
+"indicator.pleaseSelectBathroomType" = "Please, select Bathroom type";
 "indicator.postSuccessfulyCreated" = "Post successfully created";
 "indicator.postSuccessfulyEdited" = "Post successfuly edited";
+"indicator.successDeletePostIndicator" = "Success Delete Post";
+"indicator.successIndicator" = "Success";
+"indicator.verificationEmailSentIndicator" = "Verification email sent";
+"indicator.verifyEmailIndicator" = "Verify Email";
+"indicator.writeNamePost" = "Write address";
+"indicator.writeNumbersOfFloors" = "Write number of floors (0-30)";
+"indicator.writePhoneNumber" = "Write phone number";
+"indicator.writePrice" = "Write price";
+"indicator.writeTotalArea" = "Write total area";
+"indicator.writeTotalNumberOfRooms" = "Write total number of rooms";
+"label.emptyProfileLabel" = "Empty profile";
+"label.noPostLabel" = "No post`s";
+"label.pleaseLogin" = "Please login🥹";
+"label.totalNumberOfRoomsLabel" = "Total numer of Rooms";
+"label.userSetting" = "User Setting";
+"label.userSettingNameLabel" = "Name";
+"navBar.setting" = "Setting";
+"navBar.signIn" = "Sign In";
+"navBar.signOut" = "Sign Out";
+"placeholder.textFieldTypeAddress" = "Enter address";
+"placeholder.textFieldTypeEmail" = "Enter email...";
+"placeholder.textFieldTypeName" = "Enter name...";
+"placeholder.textFieldTypePassword" = "Enter password...";
+"tabBar.add" = "Add";
