--- a/kufar-analogue/kufar-analogue/be.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/be.lproj/Localizable.strings
@@ -69,3 +69,5 @@
 "placeholder.textFieldTypeName" = "Увядзіце імя...";
 "placeholder.textFieldTypePassword" = "Увядзіце пароль...";
 "tabBar.add" = "Дадаць";
+"label.trash" = "Выдаліць";
+"label.edit" = "Змяніць";
