--- a/kufar-analogue/kufar-analogue/be.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/be.lproj/Localizable.strings
@@ -1,73 +1,204 @@
-/*
+
+
+"action.combinedBathroom" = "Сумешчаны";
+
+
+"action.delete" = "Выдаліть пост";
+
+
+"action.glazedBalcon" = "зашклёны";
+
+
+"action.no" = "Не";
+
+
+"action.nonGlazedBalcon" = "не зашклёны";
+
+
+"action.openGalerry" = "Выбраць фота";
+
+
+"action.separateBathroom" = "раздзельны";
+
+
+"action.takePhoto" = "Зрабіць фота";
+
+
+"action.yes" = "Так";
+
+
+"button.editPostButton" = "Змяніць пост🤌🏾";
+
+
+"button.saveChangesButton" = "";
+
+
+"button.saveChangesButton" = "";
+
+
+"controller.areYouSureToMakeChangesAllertControllerMessage" = "Вы ўпэўнены, што хочаце ўнесці змены?";
+
+
+"controller.doYouWantToCreatePostWithoutDescription" = "Вы хочаце стварыць аб'яву без апісання?";
+
+
+"controller.doYouWantToCreatePostWithoutPhoto" = "Стварыць аб'яву без фота?";
+
+
+"controller.saveChangesAllertControllerTitle" = "Захаваць змены?";
+
+
+"controller.thereIsNoPhoto" = "Не абрана фота";
+
+
+"controller.thereIsNotDescription" = "Не запоўнена апісанне";
+
+
+"indicator.LogInToChangeYourProfileIndicator" = "Увайдзіце, каб змяніць профіль";
+
+
+"indicator.UserDoesntExist" = "Карыстач не існуе";
+
+
+"indicator.UserDoesntHaveEmail" = "У карыстача няма email";
+
+
+"indicator.emailIsEmptyIndicator" = "email пусты";
+
+
+"indicator.errorCreatingUserIndicator" = "Памылка стварэння карыстача";
+
+
+"indicator.errorDeletePostIndicator" = "Памылка выдалення аб'явы";
+
+
+"indicator.errorDuringPhotoProcessing" = "Памылка пры апрацоўцы фота";
+
+
+"indicator.errorIndicator" = "Памылка";
+
+
+"indicator.errorSendingVerificationEmailIndicator" = "Памылка адпраўкі падцверджання";
+
+
+"indicator.errorSigningInIndicator" = "Памылка ўваходу";
+
+
+"indicator.passwordHasLessIndicator" = "Пароль вінен быць больш за 6 сімвалаў";
+
+
+"indicator.passwordIsEmptyIndicator" = "Поле паролю пустое";
+
+
+"indicator.passwordResetEmailSentIndicator" = "Пароль адпраўлены на е-пошту";
+
+
+"indicator.pleaseCheckYourEmailForConfirmNewEmailIndicator" = "Калі ласка, праверце пошту";
+
+
+"indicator.pleaseCheckYourEmailForVerufyNewEmailIndicator" = "Праверце пошту";
+
+
+"indicator.pleaseLogin" = "Калі ласка, ўвайдзіце🥹";
+
+
+"indicator.pleaseSelectBalconeType" = "Абярыце тып балкону";
+
+
+"indicator.pleaseSelectBathroomType" = "Абярыце тып санвузла";
+
+
+"indicator.postSuccessfulyCreated" = "Аб'ява створана";
+
+
+"indicator.postSuccessfulyEdited" = "Аб'ява зменена";
+
+
+"indicator.successDeletePostIndicator" = "Аб'ява выдалена";
+
+
+"indicator.successIndicator" = "Поспех";
+
+
+"indicator.verificationEmailSentIndicator" = "Пацвярджэнне адпраўлена";
+
+
+"indicator.verifyEmailIndicator" = "Пацвердзіце Email";
+
+
+"indicator.writeNamePost" = "Запоўніце адрас";
+
+
+"indicator.writeNumbersOfFloors" = "Запоўніце паверх";
+
+
+"indicator.writePhoneNumber" = "Запоўніце нумар тэлефона";
+
+
+"indicator.writePrice" = "Запоўніце кошт";
+
+
+"indicator.writeTotalArea" = "Запоўніце аг. плошчу";
+
+
+"indicator.writeTotalNumberOfRooms" = "Запоўніце колькасць пакояў";
+
+
+"label.edit" = "Змяніць";
+
+
+"label.emptyProfileLabel" = "Профіль пусты";
+
+
+"label.noPostLabel" = "Аб'яў няма";
+
+
+"label.pleaseLogin" = "Увайдзіце🥹";
+
+
+"label.totalNumberOfRoomsLabel" = "Агкльна пакояў";
+
+
+"label.trash" = "Выдаліць";
+
+
+"label.userSetting" = "Налады";
+
+
+"label.userSettingNameLabel" = "Імя";
+
+
+"navBar.setting" = "Налады";
+
+
+"navBar.signIn" = "Увайсці";
+
+
+"navBar.signOut" = "Выйсці";
+
+
+"placeholder.textFieldTypeAddress" = "Запоўніце адрас";
+
+
+"placeholder.textFieldTypeEmail" = "Увядзіце email...";
+
+
+"placeholder.textFieldTypeName" = "Увядзіце імя...";
+
+
+"placeholder.textFieldTypePassword" = "Увядзіце пароль...";
+
+
+"tabBar.add" = "Дадаць";
+
+/* 
   Localizable.strings
   kufar-analogue
 
   Created by Bahdan Piatrouski on 17.05.23.
   
-*/
-
+ */
 "tabBar.profile" = "Профіль";
-"action.combinedBathroom" = "Сумешчаны";
-"action.delete" = "Выдаліть пост";
-"action.glazedBalcon" = "зашклёны";
-"action.no" = "Не";
-"action.nonGlazedBalcon" = "не зашклёны";
-"action.openGalerry" = "Выбраць фота";
-"action.separateBathroom" = "раздзельны";
-"action.takePhoto" = "Зрабіць фота";
-"action.yes" = "Так";
-"button.editPostButton" = "Змяніць пост🤌🏾";
-"button.saveChangesButton" = "";
-"button.saveChangesButton" = "";
-"controller.areYouSureToMakeChangesAllertControllerMessage" = "Вы ўпэўнены, што хочаце ўнесці змены?";
-"controller.doYouWantToCreatePostWithoutDescription" = "Вы хочаце стварыць аб'яву без апісання?";
-"controller.doYouWantToCreatePostWithoutPhoto" = "Стварыць аб'яву без фота?";
-"controller.saveChangesAllertControllerTitle" = "Захаваць змены?";
-"controller.thereIsNoPhoto" = "Не абрана фота";
-"controller.thereIsNotDescription" = "Не запоўнена апісанне";
-"indicator.LogInToChangeYourProfileIndicator" = "Увайдзіце, каб змяніць профіль";
-"indicator.UserDoesntExist" = "Карыстач не існуе";
-"indicator.UserDoesntHaveEmail" = "У карыстача няма email";
-"indicator.emailIsEmptyIndicator" = "email пусты";
-"indicator.errorCreatingUserIndicator" = "Памылка стварэння карыстача";
-"indicator.errorDeletePostIndicator" = "Памылка выдалення аб'явы";
-"indicator.errorDuringPhotoProcessing" = "Памылка пры апрацоўцы фота";
-"indicator.errorIndicator" = "Памылка";
-"indicator.errorSendingVerificationEmailIndicator" = "Памылка адпраўкі падцверджання";
-"indicator.errorSigningInIndicator" = "Памылка ўваходу";
-"indicator.passwordHasLessIndicator" = "Пароль вінен быць больш за 6 сімвалаў";
-"indicator.passwordIsEmptyIndicator" = "Поле паролю пустое";
-"indicator.passwordResetEmailSentIndicator" = "Пароль адпраўлены на е-пошту";
-"indicator.pleaseCheckYourEmailForConfirmNewEmailIndicator" = "Калі ласка, праверце пошту";
-"indicator.pleaseCheckYourEmailForVerufyNewEmailIndicator" = "Праверце пошту";
-"indicator.pleaseLogin" = "Калі ласка, ўвайдзіце🥹";
-"indicator.pleaseSelectBalconeType" = "Абярыце тып балкону";
-"indicator.pleaseSelectBathroomType" = "Абярыце тып санвузла";
-"indicator.postSuccessfulyCreated" = "Аб'ява створана";
-"indicator.postSuccessfulyEdited" = "Аб'ява зменена";
-"indicator.successDeletePostIndicator" = "Аб'ява выдалена";
-"indicator.successIndicator" = "Поспех";
-"indicator.verificationEmailSentIndicator" = "Пацвярджэнне адпраўлена";
-"indicator.verifyEmailIndicator" = "Пацвердзіце Email";
-"indicator.writeNamePost" = "Запоўніце адрас";
-"indicator.writeNumbersOfFloors" = "Запоўніце паверх";
-"indicator.writePhoneNumber" = "Запоўніце нумар тэлефона";
-"indicator.writePrice" = "Запоўніце кошт";
-"indicator.writeTotalArea" = "Запоўніце аг. плошчу";
-"indicator.writeTotalNumberOfRooms" = "Запоўніце колькасць пакояў";
-"label.emptyProfileLabel" = "Профіль пусты";
-"label.noPostLabel" = "Аб'яў няма";
-"label.pleaseLogin" = "Увайдзіце🥹";
-"label.totalNumberOfRoomsLabel" = "Агкльна пакояў";
-"label.userSetting" = "Налады";
-"label.userSettingNameLabel" = "Імя";
-"navBar.setting" = "Налады";
-"navBar.signIn" = "Увайсці";
-"navBar.signOut" = "Выйсці";
-"placeholder.textFieldTypeAddress" = "Запоўніце адрас";
-"placeholder.textFieldTypeEmail" = "Увядзіце email...";
-"placeholder.textFieldTypeName" = "Увядзіце імя...";
-"placeholder.textFieldTypePassword" = "Увядзіце пароль...";
-"tabBar.add" = "Дадаць";
-"label.trash" = "Выдаліць";
-"label.edit" = "Змяніць";
+
+/*  */
+"textField.placeholder.typeSomething" = "";
