--- a/kufar-analogue/kufar-analogue/ru.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/ru.lproj/Localizable.strings
@@ -1,21 +1,21 @@
 
 
-"action.combinedBathroom" = "совмещенный санузел";
+"action.combinedBathroom" = "Совмещенный санузел";
 
 
-"action.glazedBalcon" = "застекленный балкон";
+"action.glazedBalcon" = "Застекленный балкон";
 
 
-"action.nonGlazedBalcon" = "не застекленный балкон";
+"action.nonGlazedBalcon" = "Не застекленный балкон";
 
 
-"action.openGalerry" = "открыть галерею";
+"action.openGalerry" = "Открыть галерею";
 
 
-"action.separateBathroom" = "раздельный санузел";
+"action.separateBathroom" = "Раздельный санузел";
 
 
-"action.takePhoto" = "сделать фото";
+"action.takePhoto" = "Сделать фото";
 
 
 "alert.action.no" = "нет";
@@ -23,110 +23,118 @@
 
 "alert.action.yes" = "да";
 
+"alert.action.ok" = "хорошо";
 
-"alert.contoller.message.createPostWithoutPhoto" = "создать без фото?";
-
-
-"alert.controller.message.createPostWithoutDescription" = "создать без описания?";
+"alert.contoller.message.createPostWithoutPhoto" = "Создать без фото?";
 
 
-"alert.controller.title.descriptionIsEmpty" = "описание пустое";
+"alert.controller.message.createPostWithoutDescription" = "Создать без описания?";
+
+"alert.controller.message.verificationEmailSent" = "Подтверждение выслано на почту";
+
+"alert.controller.title.descriptionIsEmpty" = "Описание пустое";
 
 
-"alert.controller.title.photoIsEmpty" = "нет фото";
+"alert.controller.title.photoIsEmpty" = "Нет фото";
 
 
-"alert.controller.title.saveChanges" = "сохранить изменения";
+"alert.controller.title.saveChanges" = "Сохранить изменения";
+
+"alert.controller.title.verificationEmailSent" = "Подтверждение e-mail отправлено";
 
 
-"button.menu.action.combinedBathroom" = "совмещенный";
+"button.menu.action.combinedBathroom" = "Совмещенный";
 
 
-"button.menu.action.glazedBalcon" = "застекленный";
+"button.menu.action.glazedBalcon" = "Застекленный";
 
 
-"button.menu.action.nonGlazedBalcon" = "не застекленный";
+"button.menu.action.nonGlazedBalcon" = "Не застекленный";
 
 
-"button.menu.action.openGallery" = "открыть галерею";
+"button.menu.action.openGallery" = "Открыть галерею";
 
 
-"button.menu.action.separatedBathroom" = "раздельный";
+"button.menu.action.separatedBathroom" = "Раздельный";
 
 
-"button.menu.action.takePhoto" = "сделать фото";
+"button.menu.action.takePhoto" = "Сделать фото";
 
 
-"button.title.addPost" = "добавить обьявление";
+"button.title.addPost" = "Добавить обьявление";
 
 
-"button.title.delete" = "удалить обьявление";
+"button.title.delete" = "Удалить обьявление";
 
 
-"button.title.editPost" = "изменить обьявление";
+"button.title.editPost" = "Изменить обьявление";
 
 
-"button.title.saveChanges" = "сохранить настройки";
+"button.title.saveChanges" = "Сохранить настройки";
+
+"button.title.signIn" = "Войти";
+
+"button.title.signUp" = "Зарегистрироваться";
 
 
-"contexAction.edit" = "редактировать";
+"contexAction.edit" = "Редактировать";
 
 
-"indicator.LogInToChangeProfile" = "зайдите, чтобы изменить профиль";
+"indicator.LogInToChangeProfile" = "Войдите, чтобы изменить профиль";
 
 
-"indicator.message.balconyTypeIsntSelected" = "выберите тип балкона";
+"indicator.message.balconyTypeIsntSelected" = "Выберите тип балкона";
 
 
-"indicator.message.bathroomTypeIsntSelected" = "выберите тип санузла";
+"indicator.message.bathroomTypeIsntSelected" = "Выберите тип санузла";
 
 
 "indicator.message.emailIsEmpty" = "email пустой";
 
 
-"indicator.message.errorPhotoProcessing" = "ошибка обработки фото";
+"indicator.message.errorPhotoProcessing" = "Ошибка обработки фото";
 
 
-"indicator.message.nameIsEmpty" = "имя пустое";
+"indicator.message.nameIsEmpty" = "Имя пустое";
 
 
-"indicator.message.numberOfFloorsIsEmpty" = "поле (всего этажей) пустое";
+"indicator.message.numberOfFloorsIsEmpty" = "Поле (всего этажей) пустое";
 
 
-"indicator.message.passwordHasLess" = "маленький пароль";
+"indicator.message.passwordHasLess" = "Маленький пароль";
 
 
-"indicator.message.passwordIsEmpty" = "пароль пустой";
+"indicator.message.passwordIsEmpty" = "Пароль пустой";
 
 
-"indicator.message.phoneNumberIsEmpty" = "номер пустой";
+"indicator.message.phoneNumberIsEmpty" = "Номер пустой";
 
 
-"indicator.message.plsCheckUrEmailForConfirmNewEmail" = "подтвердите новый email";
+"indicator.message.plsCheckUrEmailForConfirmNewEmail" = "Подтвердите новый email";
 
 
-"indicator.message.postCreatedSuccessfully" = "обьявление создано";
+"indicator.message.postCreatedSuccessfully" = "Обьявление создано";
 
 
-"indicator.message.postEditedSuccessfully" = "обьявление изменено";
+"indicator.message.postEditedSuccessfully" = "Обьявление изменено";
 
 
-"indicator.message.priceIsEmpty" = "заполните цену";
+"indicator.message.priceIsEmpty" = "Заполните цену";
 
 
-"indicator.message.totalAreaIsEmpt" = "общая площадь пустая";
+"indicator.message.totalAreaIsEmpt" = "Общая площадь пустая";
 
 
-"indicator.message.totalNumberOfRoomsIsEmpty" = "поле (всего комнат) пустое";
+"indicator.message.totalNumberOfRoomsIsEmpty" = "Поле (всего комнат) пустое";
 
 
-"indicator.message.userDoesntExist" = "пользователь не существует";
+"indicator.message.userDoesntExist" = "Пользователь не существует";
 
 
-"indicator.message.userDoesntHaveEmail" = "у пользователя нет email";
+"indicator.message.userDoesntHaveEmail" = "У пользователя нет email";
 
 
-"indicator.message.verifyEmail" = "подтвердите email";
+"indicator.message.verifyEmail" = "Подтвердите email";
 
 
 "indicator.title.emailIsEmpty" = "email пустой";
@@ -135,10 +143,10 @@
 "indicator.title.error" = "Ошибка";
 
 
-"indicator.title.passwordIsEmpty" = "пароль пустой";
+"indicator.title.passwordIsEmpty" = "Пароль пустой";
 
 
-"indicator.title.resetPasswordMessageWasSent" = "пароль отправлен";
+"indicator.title.resetPasswordMessageWasSent" = "Пароль отправлен";
 
 
 "indicator.title.success" = "Успешно";
@@ -147,40 +155,40 @@
 "indicator.title.verificationSent" = "Подтверждение отправлено";
 
 
-"label.emptyProfile" = "пустой профиль";
+"label.emptyProfile" = "Пустой профиль";
 
 
-"label.totalNumberOfRooms" = "всего комнат";
+"label.totalNumberOfRooms" = "Всего комнат";
 
 
-"label.userSetting" = "настройки ";
+"label.userSetting" = "Настройки ";
 
 
-"navigationBar.settings" = "настройки";
+"navigationBar.settings" = "Настройки";
 
 
-"navigationBar.signIn" = "войти";
+"navigationBar.signIn" = "Войти";
 
 
-"navigationBar.signOut" = "выйти";
+"navigationBar.signOut" = "Выйти";
 
 
-"tabBar.add" = "добавить";
+"tabBar.add" = "Добавить";
 
 
-"tabBar.profile" = "профиль";
+"tabBar.profile" = "Профиль";
 
 
-"textField.placeholder.typeSomething" = "напишите %s";
-
-/*  */
-"words.email" = "электронная почта";
-
-
-"words.name" = "имя";
-
-
-"words.password" = "пароль";
+"textField.placeholder.typeSomething" = "Напишите %s";
 
 /*  */
-"words.phoneNumber" = "номер телефона";
+"words.email" = "Электронная почта";
+
+
+"words.name" = "Имя";
+
+
+"words.password" = "Пароль";
+
+/*  */
+"words.phoneNumber" = "Номер телефона";
