--- a/kufar-analogue/kufar-analogue/en.lproj/Localizable.strings
+++ b/kufar-analogue/kufar-analogue/en.lproj/Localizable.strings
@@ -21,16 +21,20 @@
 "alert.action.no" = "no";
 
 
+"alert.action.ok" = "Ok";
+
+
 "alert.action.yes" = "yes";
 
-"alert.action.ok" = "Ok";
 
 "alert.contoller.message.createPostWithoutPhoto" = "create without photo?";
 
 
 "alert.controller.message.createPostWithoutDescription" = "create ad without description?";
 
+
 "alert.controller.message.verificationEmailSent" = "Verification sent to ur e-mail";
+
 
 "alert.controller.title.descriptionIsEmpty" = "description is empty";
 
@@ -40,7 +44,9 @@
 
 "alert.controller.title.saveChanges" = "save changes";
 
+
 "alert.controller.title.verificationEmailSent" = "Verification e-mail sent";
+
 
 "button.menu.action.combinedBathroom" = "combi ";
 
@@ -71,9 +77,12 @@
 
 "button.title.saveChanges" = "save Changes";
 
+
 "button.title.signIn" = "Sign In";
 
+
 "button.title.signUp" = "Sign Up";
+
 
 "contexAction.edit" = "edit";
 
@@ -177,7 +186,7 @@
 "tabBar.profile" = "profile";
 
 
-"textField.placeholder.typeSomething" = "type %s";
+"textField.placeholder.typeSomething" = "type %@";
 
 
 "words.email" = "email";
@@ -187,5 +196,6 @@
 
 
 "words.password" = "password";
+
 
 "words.phoneNumber" = "phone number";
